# Little-Tree-Wallpaper-Next-Flet

./: .gitignore  README.md  STORE_FEATURE_SUMMARY.md  pyproject.toml  test_store.py
.github/instructions/: flet库使用说明.instructions.md  ltws库使用说明.instructions.md  壁纸源格式.instructions.md  语言使用.instructions.md
.github/workflows/: build_on_linux.yml  build_on_macos.yml  build_on_windows.yml  build_with_pyinstaller.yml  check-code.yml  pylint.yml  ruff.yml
docs/: plugin_dev.md  plugin_permissions.md  settings.md  store.md  store_implementation.md  store_ui_preview.md  themes.md
docs/themes/: aurora_green.json
src/: config.py  ltwapi.py  ltwtype.py  main.py
src/LICENSES/: orjson.txt  rtoml.txt
src/app/: __init__.py  application.py  auto_change.py  conflicts.py  constants.py  download_manager.py  favorites.py  first_run.py  image_optimizer.py  ipc.py  logging_config.py  paths.py  settings.py  source_parser.py  startup.py  theme.py  tray.py  ui_utils.py  update.py  wallpaper_sources.py
src/app/core/: pages.py
src/app/plugins/: __init__.py  base.py  config.py  data.py  events.py  favorites_api.py  manager.py  operations.py  permissions.py  runtime.py
src/app/sniff/: __init__.py  service.py
src/app/store/: README.md  __init__.py  models.py  service.py  ui.py
src/plugins/: __init__.py  core.py  sample.py
src/plugins/sample/: .store_meta.json  sample.py
src/wallpaper_sources/: official.ltws  official_sources.toml
tools/: build.py  build_cx.py
