[project]
name = "little-tree-wallpaper-next-flet"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Little Tree Studio", email = "zsxiaoshu@outlook.com" }
]
dependencies = [
  "aiohttp>=3.12.14",
  "filetype>=1.2.0",
  "flet==0.28.3",
  "magic-python>=0.4.0",
  "pycurl>=7.45.6",
  "python-magic>=0.4.27; platform_system != 'Windows'",
  "python-magic-bin>=0.4.14; platform_system == 'Windows'",
  "loguru>=0.7.3",
  "platformdirs>=4.3.8",
  "pyperclip>=1.9.0",
  "orjson>=3.11.3",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.littletreestudiowallpaper"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "little-tree-wallpaper-next-flet"

# company name to display in about app dialogs
company = "Little Tree Studio"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Little Tree Studio"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
