[project]
name = "little-tree-wallpaper-next-flet"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Little Tree Studio", email = "studio@zsxiaoshu.com" }
]
dependencies = [
  "aiohttp>=3.13.2",
  "requests>=2.32.5",
  "filetype>=1.2.0",
  "flet==0.28.3",
  "python-magic>=0.4.27; platform_system != 'Windows'",
  "python-magic-bin>=0.4.14; platform_system == 'Windows'",
  "loguru>=0.7.3",
  "platformdirs>=4.5.0",
  "pyperclip>=1.11.0",
  "orjson>=3.11.4",
  "rtoml>=0.13.0",
  "pystray>=0.19.5",
  "psutil>=7.1.3",
  "pillow>=12.0.0",
  "ltws-parser>=1.5.0",
]

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "flet[all]==0.28.3",
    "pyinstaller>=6.16.0",
]

[tool.flet]
org = "com.littletreestudio"
product = "Little Tree Wallpaper Next"
company = "Little Tree Studio"
copyright = "Copyright (C) 2025 by Little Tree Studio"

[tool.flet.app]
path = "src"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
